<resources>
    <string name="app_names">AppCappAppDemo</string>

    <string name="string_pay">下单生成TN</string>
    <string name="string_pay_hint">TN号：可下单生成/可手动输入</string>
    <string name="string_pay_hint_num">TN号: 默认637868762282541849211</string>
    <string name="string_query">查询订单</string>
    <string name="string_query_hint">订单号：out_trade_no/可手动输入</string>
    <string name="string_query_hint_num">订单号: 默认1663239160</string>
    <string name="string_yinlian">银联支付</string>
    <string name="string_refund">订单退款</string>
    <string name="string_query_refund">查询退款单</string>
    <string name="string_query_refund_hint">退款订单号：out_refund_no/可手动输入</string>
    <string name="string_query_refund_hint_num">退款订单号: 默认1663239227</string>
    <string name="string_show_msg">点击按钮开始操作</string>
    <string name="string_clear_log">清空日志</string>
    <string name="string_loading">加载中...</string>

    <string name="string_tool_bar">AppCallApp</string>
    <string name="string_tool_bar_param">参数配置</string>
    <string name="string_tool_bar_save">保存</string>

    <string name="string_pay_money">支付金额:\n单位分</string>
    <string name="string_pay_money_default">默认:1000</string>
    <string name="string_refund_money">退款金额:\n单位分</string>
    <string name="string_refund_money_default">默认:500</string>
    <string name="string_mch_id">商户号:</string>
    <string name="string_mch_id_default">默认:100510000133</string>
    <string name="string_private_key">私钥:</string>
    <string name="string_private_key_default">默认:6caa96d4f2661a7c8c8f009d1f9aafba</string>
    <string name="string_yin_lian">银联环境:\n00线上01测试</string>
    <string name="string_yin_lian_default">默认:01</string>
    <string name="string_base_url">后台地址:</string>
    <string name="string_base_url_default">默认:http://checkout-switch-dev.wallyt.net/jsonxml/pay/gateway</string>

    <string name="string_modify_success">参数修改成功</string>

    <string name="string_uninstall_yin_lian">手机上未安装银联Apk</string>
    <string name="string_param_error">接口请求参数不是String类型</string>
</resources>