<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".aca.activity.ParamSettingActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color_gray" />


    <!--  支付金额  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_pay_money"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/id_et_pay_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/string_pay_money_default"
            android:maxLines="1" />

    </LinearLayout>

    <!--  退款金额  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_refund_money"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/id_et_refund_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/string_refund_money_default"
            android:maxLines="1" />

    </LinearLayout>

    <!--  商户号  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_mch_id"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/id_et_mch_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/string_mch_id_default"
            android:maxLines="1" />

    </LinearLayout>

    <!--  密钥  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_private_key"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/id_et_private_key"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/string_private_key_default"
            android:maxLines="1" />

    </LinearLayout>

    <!--  银联环境  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_yin_lian"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/id_et_yin_lian"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/string_yin_lian_default"
            android:maxLines="1" />

    </LinearLayout>

    <!--  后台地址  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/string_base_url"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/id_et_base_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:ellipsize="end"
            android:hint="@string/string_base_url_default"
            android:maxLines="1" />

    </LinearLayout>


</LinearLayout>